<resources>
    <string name="app_name">TestApp2</string>
    <string name="action_home">Home</string>
    <string name="action_myProject">My Project</string>
    <string name="action_setting">Setting</string>
    <string name="Open">Drawer Open</string>
    <string name="Close">Drawer Closed</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="my_cart">My Cart</string>
    <string name="add_toggle_button">add_toggle_button</string>
    <string name="add_slid_button">add_slid_button</string>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="edit">edit</string>
    <string name="run">run</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="login">login</string>
    <string name="don_t_have_a_account">don\'t have a account</string>
    <string name="signup">signup</string>
    <string name="welcome">WELCOME</string>
    <string name="create">Create</string>
    <string name="profile">Profile</string>
    <string name="my_project">My Project</string>
    <string name="notification">Notification</string>
    <string name="help">Help</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="register">register</string>
    <string name="alredy_have_a_account">Alredy have a account</string>
</resources>
