<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#000000"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:maxLines="1"
        android:id="@+id/Remail"
        android:drawableLeft="@drawable/ic_markunread_black_24dp"
        android:drawableStart="@drawable/ic_markunread_black_24dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/rbutton"/>
    <EditText
        android:layout_below="@+id/Remail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:maxLines="1"
        android:id="@+id/Rpassword"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/rbutton"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rbutton"
        android:layout_marginTop="20dp"
        android:id="@+id/Rsignup"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_below="@+id/Rpassword"
        android:singleLine="true"
        android:maxLines="1"/>
    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/RtextView"
        android:textAlignment="viewEnd"
        android:layout_below="@+id/Rsignup"
        android:text="@string/don_t_have_a_account"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:gravity="end" />

</RelativeLayout>