<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".NewActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textSize="35sp"
            android:id="@+id/welcome"
            android:background="@drawable/home"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/text">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/back1"
                android:layout_width="match_parent"
                app:cardCornerRadius="15dp"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:contentDescription="@android:string/copy"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:onClick="onClick"
                        android:layout_weight="1"
                        android:id="@+id/my_project1"
                        android:background="@drawable/ic_add_black_24dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/create"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:id="@+id/text_view1"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                app:cardBackgroundColor="@color/back1"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                app:cardCornerRadius="15dp"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:contentDescription="@android:string/copy"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:onClick="onClick"
                        android:id="@+id/my_project2"
                        android:background="@drawable/ic_account_circle_black_24dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:id="@+id/text_view2"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/back1"
                android:layout_width="match_parent"
                app:cardCornerRadius="15dp"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:contentDescription="@android:string/copy"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:onClick="onClick"
                        android:id="@+id/my_project4"
                        android:background="@drawable/ic_favorite_black_24dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/my_project"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:id="@+id/text_view4"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                app:cardBackgroundColor="@color/back1"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                app:cardCornerRadius="15dp"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:contentDescription="@android:string/copy"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:onClick="onClick"
                        android:layout_weight="1"
                        android:id="@+id/my_project3"
                        android:background="@drawable/ic_settings_black_24dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:id="@+id/text_view3"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/back1"
                android:layout_width="match_parent"
                app:cardCornerRadius="15dp"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:contentDescription="@android:string/copy"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:onClick="onClick"
                        android:id="@+id/my_project5"
                        android:background="@drawable/ic_add_alert_black_24dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/notification"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:id="@+id/text_view5"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                app:cardBackgroundColor="@color/back1"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                app:cardCornerRadius="15dp"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:contentDescription="@android:string/copy"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:onClick="onClick"
                        android:layout_weight="1"
                        android:id="@+id/my_project6"
                        android:background="@drawable/ic_help_black_24dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:id="@+id/text_view6"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>